# libsndfile-gyp

./: BUILD.gn  Makefile  defaults.gypi  libsndfile.gyp
src/linux/: config.h
src/mac/: config.h
src/win/: config.h
